--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="https://webapi.amap.com/maps?v=2.0&key=3fb8ff5af8375545395647bfabbeac7b"></script>
   </body>
 </html>
